# TimerScheduler

./: .gitignore  README.md
timer_scheduler/: Cargo.toml  timers.http
timer_scheduler/data/: app.db
timer_scheduler/src/: main.rs  router.rs  schema.rs  ws.rs
timer_scheduler/src/app/: db.rs  routes.rs
timer_scheduler/src/auth/: db.rs  mod.rs  routes.rs  token.rs
timer_scheduler/src/groups/: auth.rs
timer_scheduler/src/groups/auth/: auth.rs  mod.rs
