[package]
name = "timer_scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }