[package]
name = "timer_scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }

jsonwebtoken = "9"
chrono = "0.4"
serde_json = "1.0.145"
rand = "0.8.5"
